# my_python_package

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  bandit-results.json  dev-requirements.txt  docker-compose.yml  mkdocs.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pyproject-update.yml  auto-upgrade-pyproject.yml  code-coverage.yml  dependabot.yml  dependency-scanning.yml  docs.yml  docstring-coverage.yml  docstrings-coverage.yml  import-check.yml  release.yml  security-scan.yml  style-check.yml  test.yml
docs/: Makefile  api.md  changelog.rst  cli.rst  code_of_conduct.rst  config.py  contributing.rst  development.rst  index.rst  installation.rst  make.bat  make_api_docs.py  requirements.txt  usage.rst
docs/_static/css/: custom.css
docs/_static/js/: custom.js
examples/: usage.py
scripts/: README.md  check_docstring_coverage.py  check_docstrings_coverage.py  check_imports_vs_pyproject.py  generate_api_docs.py  generate_docs.py  pyproject_editor.py  pyproject_updater.py  rename_package.py  test_package.py
src/greeting_toolkit/: __init__.py  __main__.py  cli.py  config.py  core.py  logging.py
src/my_python_package/: __init__.py  cli.py  config.py  core.py  logging.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_docstring_coverage_script.py  test_logging.py  test_main.py  test_package.py
