[tool.poetry]
name = "my_python_package"
version = "0.1.1"
description = "A short description of the package."
authors = ["Diogo Ribeiro <dfr@esmad.ipp.pt>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_python_package", from = "src" }]
repository = "https://github.com/DiogoRibeiro7/my_python_package"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
tomlkit = "^0.13.3"
packaging = "^25.0"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Linting configuration
[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "ANN", "D"]
ignore = ["ANN101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "D"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=my_python_package --cov-report=term-missing"
testpaths = ["tests"]

[tool.poetry.scripts]
my-python-package = "my_python_package.cli:main"
